add endpoint functionality
